[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "memphis-safe"
version = "0.0.1"
dependencies = [
    'pandas',
    'xgboost',
    'scikit-learn',
    'importlib-metadata; python_version>="3.8"',
]

[project.scripts]
memphis-safe = "memphis_safe:memphis_safe"
